--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,19 @@ ul {
   border: 1px solid #000;
 }
 
+.shop-btn {
+  background: #fff;
+  color: #000000;
+  padding: 10px 30px;
+  font: 500 13px Plus Jakarta Sans;
+  transition: all 0.5s;
+}
+
+.shop-btn:hover {
+  color: #fff;
+  background: #000000;
+}
+
 #infobar {
   padding-block: 8px;
 }
@@ -90,4 +103,231 @@ ul {
 }
 #search-box input:focus-visible {
   outline: none;
+}
+
+#sales-offer {
+  background: #c9ff5b;
+  padding-block: 8px;
+}
+#sales-offer .offer {
+  margin-left: 5px;
+  font: 400 13px Plus Jakarta Sans;
+}
+#sales-offer .fa-solid {
+  font-size: 15px;
+}
+
+#banner {
+  background: #000000;
+  overflow: hidden;
+  height: 600px;
+}
+#banner .bg-img {
+  animation: banner-ani 3s linear infinite alternate-reverse;
+}
+#banner .slider-img {
+  width: 500px;
+  height: auto;
+  position: absolute;
+}
+#banner .rotate {
+  transform: rotateZ(10deg);
+}
+#banner .banner-head {
+  width: 50%;
+  position: absolute;
+  z-index: 2;
+  inset: 0;
+  margin: 10% auto;
+  color: #fff;
+}
+#banner .banner-head h1 {
+  font: 600 80px/80px Oswald;
+}
+#banner .banner-head span {
+  font: 400 14px Plus Jakarta Sans;
+}
+#banner .banner-head .banner-links {
+  background: #fff;
+  border: 1px solid #fff;
+  color: #000000;
+  padding: 10px 30px;
+  font: 500 13px Plus Jakarta Sans;
+  transition: all 0.5s;
+}
+#banner .banner-head .banner-links:hover {
+  background: rgba(0, 0, 0, 0);
+  color: #fff;
+}
+
+@keyframes banner-ani {
+  0% {
+    transform: translateY(0) rotateZ(10deg);
+  }
+  100% {
+    transform: translateY(-90px) rotateZ(10deg);
+  }
+}
+#discount-bar {
+  border: 1px solid #000;
+}
+#discount-bar h2 {
+  width: 80%;
+  font: 600 30px/30px Oswald;
+}
+
+#products-banners .banner-1 {
+  padding: 120px 50px;
+  background: url(../images/sport-2-banner-1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#products-banners .banner-2 {
+  padding: 30px 50px;
+  width: 49.3%;
+  background: url(../images/sport-2-banner-2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#products-banners .banner-3 {
+  padding: 30px 50px;
+  width: 49.3%;
+  background: url(../images/sport-2-banner-3.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#products-banners .heading-box {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+}
+#products-banners .heading-box h2 {
+  width: 40%;
+  color: #fff;
+  font: 600 70px/70px Oswald;
+}
+#products-banners .heading-box h2 .green {
+  color: #c9ff5b;
+}
+#products-banners .heading-box .tagline {
+  font: 400 20px Plus Jakarta Sans;
+  color: #fff;
+}
+#products-banners .heading-box .h2 {
+  font-size: 60px;
+}
+#products-banners .heading-box .shop-links {
+  background: #fff;
+  border: 1px solid #fff;
+  color: #000000;
+  padding: 10px 30px;
+  font: 500 13px Plus Jakarta Sans;
+  transition: all 0.5s;
+}
+#products-banners .heading-box .shop-links:hover {
+  background: transparent;
+  color: #fff;
+}
+
+#product-grid .grid-heading h2 {
+  letter-spacing: 1px;
+  font: 600 40px Oswald;
+}
+#product-grid .grid-heading .timeout {
+  background: #eb3f18;
+  color: #fff;
+}
+#product-grid .grid-heading .timeout .time {
+  letter-spacing: 1px;
+  font: 700 16px Plus Jakarta Sans;
+}
+#product-grid .products .product-img {
+  position: relative;
+  overflow: hidden;
+}
+#product-grid .products .product-img .discount {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font: 400 12px Plus Jakarta Sans;
+  padding: 2px 10px;
+  color: #fff;
+  background: #eb3f18;
+}
+#product-grid .products .product-img .product-attributes {
+  position: absolute;
+  top: 10px;
+  right: -32px;
+  transition: all 0.2s;
+}
+#product-grid .products .product-img .product-attributes a {
+  font-size: 12px;
+  padding: 8px;
+  color: #000000;
+  background: #fff;
+  margin-bottom: 5px;
+}
+#product-grid .products .product-img .product-sizes {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: -100%;
+  background: #fff;
+  padding: 5px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
+#product-grid .products .product-img .product-sizes h5, #product-grid .products .product-img .product-sizes a {
+  font: 400 12px Plus Jakarta Sans;
+}
+#product-grid .products .product-img .product-sizes a {
+  padding: 2px 5px;
+  color: #000000;
+  border: 0.5px solid #000000;
+  transition: all 0.5s;
+}
+#product-grid .products .product-img .product-sizes a:hover {
+  color: #fff;
+  background: #000000;
+}
+#product-grid .products .product-img .add-cart {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: -35px;
+  padding: 5px 10px;
+  color: #fff;
+  background: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s;
+}
+#product-grid .products .product-details .product-name {
+  color: #000000;
+  font: 400 14px Plus Jakarta Sans;
+}
+#product-grid .products .product-details .price, #product-grid .products .product-details .discount-price, #product-grid .products .product-details .actual-price {
+  font: 400 14px Plus Jakarta Sans;
+}
+#product-grid .products .product-details .discount-price {
+  color: #eb3f18;
+}
+#product-grid .products .product-details .actual-price {
+  color: grey;
+}
+#product-grid .products:hover .product-attributes {
+  right: 10px;
+}
+#product-grid .products:hover .product-sizes {
+  bottom: 10px;
+}
+#product-grid .products:hover .add-cart {
+  bottom: 10px;
 }/*# sourceMappingURL=style.css.map */
