--- a/css/style.scss
+++ b/css/style.scss
@@ -1,211 +1,268 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-a{
+
+a {
     text-decoration: none;
 }
-img{
+
+img {
     display: block;
 }
-ul{
+
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-$main-color:#c9ff5b;
-$sec-color:#000000;
-$bg-color:#eb3f18;
-$color:#fff;
-$main-font:Oswald;
-$sec-font:Plus Jakarta Sans;
 
-.container{
+$main-color: #c9ff5b;
+$sec-color: #000000;
+$bg-color: #eb3f18;
+$color: #fff;
+$main-font: Oswald;
+$sec-font: Plus Jakarta Sans;
+
+.container {
     max-width: 1320px;
 }
-.border{
+
+.border {
     border: 1px solid #000;
 }
-@mixin anchor-btn{
+
+@mixin anchor-btn {
     background: $color;
     border: 1px solid $color;
-    color:$sec-color;
-    padding:10px 30px ;
-    font:500 13px $sec-font;
-    transition: all .5s;
+    color: $sec-color;
+    padding: 10px 30px;
+    font: 500 13px $sec-font;
+    transition: all .5s !important;
 }
-.shop-btn{
+
+.shop-btn {
     background: $color;
-    color:$sec-color;
-    padding:10px 30px ;
-    font:500 13px $sec-font;
+    color: $sec-color;
+    padding: 10px 30px;
+    font: 500 13px $sec-font;
     transition: all .5s;
 
 }
-.shop-btn:hover{
+
+.shop-btn:hover {
     color: $color;
     background: $sec-color;
 }
+
 @import 'header';
-#sales-offer{
+
+#sales-offer {
     background: $main-color;
     padding-block: 8px;
-    .offer{
+
+    .offer {
         margin-left: 5px;
         font: 400 13px $sec-font;
     }
-    .fa-solid{
+
+    .fa-solid {
         font-size: 15px;
     }
 }
+
 // banner style
-#banner{
+#banner {
     background: $sec-color;
     overflow: hidden;
     height: 600px;
-    .bg-img{
-        animation:banner-ani 3s linear  infinite alternate-reverse;
+
+    .bg-img {
+        animation: banner-ani 3s linear infinite alternate-reverse;
     }
-    .slider-img{
+
+    .slider-img {
         width: 500px;
         height: auto;
         position: absolute;
     }
-    .rotate{
+
+    .rotate {
         transform: rotateZ(10deg);
     }
-    .banner-head{
+
+    .banner-head {
         width: 50%;
         position: absolute;
         z-index: 2;
         inset: 0;
         margin: 10% auto;
         color: $color;
-        h1{
+
+        h1 {
             font: 600 80px/80px $main-font;
         }
-        span{
-            font:400 14px $sec-font;
+
+        span {
+            font: 400 14px $sec-font;
         }
-        .banner-links{
+
+        .banner-links {
             @include anchor-btn;
-            &:hover{
-                background: rgba(0,0,0,0.0);
+
+            &:hover {
+                background: rgba(0, 0, 0, 0.0) !important;
                 color: $color;
             }
         }
     }
 }
+
 @keyframes banner-ani {
-    0%{ transform:translateY(0)  rotateZ(10deg); 
+    0% {
+        transform: translateY(0) rotateZ(10deg);
     }
-    100%{transform:translateY(-90px) rotateZ(10deg) ;}
+
+    100% {
+        transform: translateY(-90px) rotateZ(10deg);
+    }
 }
+
 // banner style
 // inner body style
-#discount-bar{
+#discount-bar {
     border: 1px solid #000;
-    h2{
+
+    h2 {
         width: 80%;
-        font:600 30px/30px $main-font; 
+        font: 600 30px/30px $main-font;
     }
 }
-@mixin bg-properties{
+
+@mixin bg-properties {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 
 }
-#products-banners{
-    .banner-1{
-        padding: 120px 50px;
-        background: url(../images/sport-2-banner-1.jpg);
-        @include bg-properties;
-    }
-    .banner-2{
-        padding: 30px 50px;
-        width: 49.3%;
-        background: url(../images/sport-2-banner-2.jpg);
-        @include bg-properties;
-    }
-    .banner-3{
-        padding: 30px 50px;
-        width: 49.3%;
-        background: url(../images/sport-2-banner-3.jpg);
-        @include bg-properties;
-    }
-    .heading-box{
-        display: flex;
-        align-items: start;
-        flex-direction: column;
-        h2{
-            width: 40%;
-            color: $color;
-            font:600 70px/70px $main-font;
-            .green{
-                color: $main-color
-            } 
-        }
-        .tagline{
-            font:400 20px $sec-font ;
-            color:$color;
-        }
-        .h2{
-            font-size: 60px;
-        }
-        .shop-links{
-            @include anchor-btn;
-            &:hover{
-                background: transparent;
+
+#products-banners {
+    .banner {
+        overflow: hidden;
+        position: relative;
+
+        .heading-box {
+            position: absolute;
+            top: 22%;
+            left: 70px;
+            display: flex;
+            align-items: start;
+            flex-direction: column;
+
+            h2 {
+                width: 56%;
+                color: $color;
+                font: 600 70px/70px $main-font;
+
+                .green {
+                    color: $main-color
+                }
+            }
+
+            .tagline {
+                font: 400 20px $sec-font ;
                 color: $color;
             }
+
+            .h2 {
+                font-size: 60px;
+            }
+
+            .shop-links {
+                @include anchor-btn;
+
+                &:hover {
+                    background: transparent;
+                    color: $color;
+                }
+            }
+        }
+        img {
+            transition: all .4s;
+        }
+    
+        &:hover img {
+            transform: scale(1.1);
+        }
+    }
+    .banner-width{
+        width: 49%;
+        .heading-box{
+            position: absolute;
+            top: 20px;
+            left: 60px;
         }
     }
 }
+
 // product - grid
-#product-grid{
-    .grid-heading{
-        h2{
+#product-grid {
+    .grid-heading {
+        h2 {
             letter-spacing: 1px;
-            font:600 40px $main-font ;
+            font: 600 40px $main-font ;
         }
-        .timeout{
+
+        .timeout {
             background: $bg-color;
             color: $color;
-            .time{
+
+            .time {
                 letter-spacing: 1px;
-                font:700 16px $sec-font ;
+                font: 700 16px $sec-font ;
             }
         }
     }
-    .products{
-        .product-img{
+
+    .products {
+        cursor: pointer;
+
+        .product-img {
             position: relative;
             overflow: hidden;
-            .discount{
+
+            .discount {
                 position: absolute;
                 top: 10px;
                 left: 10px;
                 font: 400 12px $sec-font;
-                padding:2px 10px ;
+                padding: 2px 10px;
                 color: $color;
                 background: $bg-color;
             }
-            .product-attributes{
+
+            .product-attributes {
                 position: absolute;
                 top: 10px;
                 right: -32px;
                 transition: all .2s;
-                a{
+
+                a {
                     font-size: 12px;
                     padding: 8px;
                     color: $sec-color;
                     background: $color;
                     margin-bottom: 5px;
+
+                    &:hover {
+                        color: $color;
+                        background: $sec-color;
+                    }
                 }
             }
-            .product-sizes{
+
+            .product-sizes {
                 position: absolute;
                 left: 10px;
                 right: 10px;
@@ -217,21 +274,26 @@ $sec-font:Plus Jakarta Sans;
                 justify-content: center;
                 align-items: center;
                 transition: all .5s;
-                h5,a{
+
+                h5,
+                .sizes {
                     font: 400 12px $sec-font;
                 }
-                a{
-                    padding:2px 5px;
-                    color: $sec-color;
+
+                .sizes {
+                    padding: 2px 5px;
+                    color: $sec-color !important;
                     border: 0.5px solid $sec-color;
-                    transition: all .5s;
-                    &:hover{
-                        color: $color;
-                        background: $sec-color;
+                    transition: all .5s !important;
+
+                    &:hover {
+                        color: $color !important;
+                        background: $sec-color !important;
                     }
                 }
             }
-            .add-cart{
+
+            .add-cart {
                 position: absolute;
                 left: 10px;
                 right: 10px;
@@ -243,33 +305,57 @@ $sec-font:Plus Jakarta Sans;
                 justify-content: center;
                 align-items: center;
                 transition: all .2s;
+
+                &:hover {
+                    background: $bg-color;
+                }
             }
         }
-        .product-details{
-            .product-name{
+
+        .product-details {
+            .product-name {
                 color: $sec-color;
-                font:400 14px $sec-font ;
+                font: 400 14px $sec-font ;
             }
-            .price,.discount-price,.actual-price{
-                font:400 14px $sec-font;
+
+            .price,
+            .discount-price,
+            .actual-price {
+                font: 400 14px $sec-font;
             }
-            .discount-price{
+
+            .discount-price {
                 color: $bg-color;
             }
-            .actual-price{
+
+            .actual-price {
                 color: grey;
             }
         }
-        &:hover{
-            .product-attributes{
+
+        &:hover {
+            .product-attributes {
                 right: 10px;
             }
-            .product-sizes{
+
+            .product-sizes {
                 bottom: 10px;
             }
-            .add-cart{
+
+            .add-cart {
                 bottom: 10px;
             }
+        }
+    }
+
+    .more-products {
+        position: relative;
+        text-decoration: underline;
+        text-underline-offset: 2px;
+        transition: all .2s !important;
+
+        &:hover {
+            color: $bg-color !important;
         }
     }
 }
