--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,10 @@
 
 a {
     text-decoration: none;
+    display: inline-block;
+}
+span{
+    display: inline-block;
 }
 
 img {
@@ -32,6 +36,9 @@ $sec-font: Plus Jakarta Sans;
 .border {
     border: 1px solid #000;
 }
+section{
+    margin-block: 80px;
+}
 
 @mixin anchor-btn {
     background: $color;
@@ -48,12 +55,25 @@ $sec-font: Plus Jakarta Sans;
     padding: 10px 30px;
     font: 500 13px $sec-font;
     transition: all .5s;
-
+}
+.shop-btn-2 {
+    border: 1px solid #000;
+    background: $sec-color;
+    color: $color;
+    padding: 10px 30px;
+    margin-block: 10px;
+    font: 500 13px $sec-font;
+    transition: all .5s;
 }
 
 .shop-btn:hover {
     color: $color;
     background: $sec-color;
+}
+.shop-btn-2:hover {
+    border: 1px solid #000;
+    color: $sec-color;
+    background: $color;
 }
 
 @import 'header';
@@ -186,6 +206,10 @@ $sec-font: Plus Jakarta Sans;
                     background: transparent;
                     color: $color;
                 }
+            }
+            .shop-links,.shop-btn{
+                padding: 10px 40px;
+                font-size: 16px;
             }
         }
         img {
@@ -359,3 +383,142 @@ $sec-font: Plus Jakarta Sans;
         }
     }
 }
+// product  categories
+#product-categories{
+    .categories-heading{
+        h2 {
+            letter-spacing: 1px;
+            font: 600 40px $main-font ;
+        }
+    }
+    .banner{
+        width: 32%;
+        .categore-img{
+            overflow: hidden;
+            img{
+                transition: all .5s;
+            }
+            &:hover{
+                img{
+                    transform: scale(1.1) rotateZ(5deg);
+                }
+            }
+        }
+        .categories-desc{
+            h3{
+                letter-spacing: 1px;
+                font: 600 30px $main-font ;
+            }
+        }
+    }
+
+}
+// products
+#product-grid-banner{
+    background-color:$main-color ;
+    background-image: url(../images/sport-2-slide3.png);
+    background-size: cover;
+    padding-block:80px ;
+    h2{
+        font:600 75px/80px $main-font;
+    }
+}
+// post
+#posts{
+    h2{
+        font:600 40px/40px $main-font;
+    }
+    .post{
+        margin-block: 30px;
+        .rating .fa-solid{
+            color: $bg-color;
+        }
+        .post-content{
+            margin-block: 30px;
+            font:600 25px/30px $main-font;
+        }
+        .description{
+            img{
+                width: 30px;
+                height: 40px;
+            }
+            span,a{
+                color: $sec-color;
+                font:500 13px $sec-font;
+            }
+        }
+    }
+}
+.post-slider{
+    height: 5px;
+    background: #e5e5e5;
+    position: relative;
+    &::before{
+        content: "";
+        background: $sec-color;
+        position: absolute;
+        inset: 0;
+        width: 50%;
+        border-radius: 10px;
+    }
+}
+// social-media
+#social-media{
+    background: $bg-color;
+    .heading{
+        color: $color;
+        h2{
+            font:600 60px/60px $main-font;
+        }
+        span{
+            font:300 18px/24px $sec-font;
+        } 
+
+        .shop-links {
+            @include anchor-btn;
+            i{
+                margin-right: 5px;
+            }
+    
+            &:hover {
+                background: transparent;
+                color: $color;
+            }
+        }
+    }
+}
+// services
+#services{
+    .services{
+        i{
+            font-size: 40px;
+        }
+        h3{
+            text-transform: uppercase;
+            font:600 22px/24px $main-font;
+        }
+        span{
+            font:400 14px/24px $sec-font;
+        }
+    }
+}
+// newsletter
+#newsletter{
+    h2{
+        font:600 30px/24px $main-font;
+    }
+    input{
+        border: 1px solid #000;
+        padding: 7px 20px;
+        &[type=submit]{
+            border: 0;
+            font: 500 16px $sec-font;
+            color: $color;
+            background: $sec-color;
+            padding: 10px 40px;
+        }
+        &:focus-visible{
+            outline: none;
+        }
+    }
+}@import 'footer';
